# mbedtls-SGX

./: .gitignore  CMakeLists.txt  Initrd.sh  build.sh  clean.sh  run.sh
cmake/: FindSGXSDK.cmake
example/enclave/: CMakeLists.txt  Enclave.edl  ecalls.cpp  enc.h  s_server.c  ssl_conn_hdlr.cpp
example/untrusted/: CMakeLists.txt  s_client.cpp
ocall/: CMakeLists.txt  net_ocalls.c
sharedir/: agent.sh
trusted/: CMakeLists.txt  dummy.c
